2008.09.12: David Nichols
	* enabled atomic operations and stack guard for solaris i386
	* fixed optional functions and options in ql_crypto.cc
	* put all options into "Option" namespace
	* updated build to work with openssl 0.9.7

2008.09.11: David Nichols
	* enabled atomic operations on SPARC with gcc
	* enabled stack monitoring on SPARC with gcc
	* enabled atomic reference counting and stack guard for solaris x86_64
	  with SunPro CC

2008.09.10: David Nichols
	* added call_builtin_function() and call_builtin_function_args()
	  functions
	* initial patch for fixing crashes based on stack growth overruns
	* fixed default stack size detection to use a more portable method
	* fixed stack size detection for powerpc

2008.09.09: David Nichols
	* removed ncurses documentation (added to ncurses module project)
	* removed opengl documentation (added to opengl module project)
	* removed glut documentation (added to glut module project)
	* removed qt documentation (added to qt module project)
	* fixed global scope of top-level local variables

2008.09.08: David Nichols
	* updated ManagedDatasource class to no longer require a connection to
	  the server to execute the getClientVersion DBI method
	* implemented force_encoding() function
	* fixed a bug in ManagedDatasource::selectRow()
	* fixed character encoding detection in HTTPClient response header
	  parsing
	* removed sybase documentation (added to sybase module project)
	* removed mysql documentation (added to mysql module project)

2008.09.07: David Nichols
	* removed pgsql documentation (added to pgsql module project)

2008.09.06: David Nichols
	* removed tibrv documentation (added to tibrv module project)
	* removed oracle documentation (added to oracle module project)

2008.09.05: David Nichols
	* removed tuxedo documentation (added to tuxedo module project)
	* removed tibae documentation (added to tibae module project)

2008.09.04: David Nichols