@@ -101,6 +101,15 @@ DLLEXPORT extern const char qore_target_arch[];
 //! the qore module directory
 DLLEXPORT extern const char qore_module_dir[];
 
+//! the c++ compiler used to build qore
+DLLEXPORT extern const char qore_cplusplus_compiler[];
+
+//! the compiler flags used to build qore
+DLLEXPORT extern const char qore_cflags[];
+
+//! the linker flags used to link qore
+DLLEXPORT extern const char qore_ldflags[];
+
 //! if the qore library includes debugging or not
 DLLEXPORT bool qore_has_debug();
 
